/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/db";
option java_package = "cn.aberic.george.protocols.db";
option java_outer_classname = "PageProto";

package db;

import "google/protobuf/timestamp.proto";

// 缓存页
message Page {
  // 名称
  string name = 1;
  // 描述
  string comment = 2;
  // 可使用内存大小(单位：Mb，0：不限制大小)
  uint64 size = 3;
  // 默认有效期(单位：秒)，如无设置，默认维300(0：永久有效)
  uint32 period = 4;
  // 创建时间
  google.protobuf.Timestamp create_time = 5;
}

// 缓存页集合
message PageList {
  repeated Page pages = 1;
}

// 请求新建缓存页
message RequestPageCreate {
  // 名称
  string name = 1;
  // 描述
  string comment = 2;
  // 可使用内存大小(单位：Mb，0：不限制大小)
  uint64 size = 3;
  // 默认有效期(单位：秒)，如无设置，默认维300(0：永久有效)
  uint32 period = 4;
}

// 请求变更缓存页
message RequestPageModify {
  // 名称
  string name = 1;
  // 新名称
  string name_new = 2;
}

// 请求缓存页信息
message RequestPageInfo {
    string page_name = 1;
}

// 请求缓存页信息
message ResponsePageInfo {
  Page page = 3;
}
